[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "ML-learning project predicting forest cover type"
authors = ["Vladislav1977"]

[tool.poetry.dependencies]
python = "3.9.*"
pandas = "^1.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
