[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "ML-learning project predicting forest cover type"
authors = ["Vladislav1977"]

[tool.poetry.scripts]
train = "forest_ml.train:train"
model_selection = "forest_ml.model_experiments:model_selection"
model_tuning = "forest_ml.train:model_tuning"


[tool.poetry.dependencies]
python = "3.9.*"
pandas = "^1.4.2"
sklearn = "^0.0"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
